# peak-traj

./: .gitignore  README.md  conda_env.yaml  download.sh  pyproject.toml  setup_env.sh
data_processing/: pbmc_10k_v3.py
notebooks/: 1-Gene-Expression-Processing.ipynb  2-Chromatin-Accessibility-Processing.ipynb  3-Multimodal-Omics-Data-Integration.ipynb  gene_trajectory.csv  inspection.ipynb  peak_traj.ipynb  peak_trajectory.csv  rna-atac-data-processing.ipynb  tutorial_human_myeloid.ipynb
peak_trajectory/: add_peak_bin_score.py  coarse_grain.py  compute_peak_distance_cmd.py  extract_peak_trajectory.py  peak_distance_shared.py
peak_trajectory/plot/: peak_trajectory_plots.py
peak_trajectory/widgets/: __init__.py  extract_peak_trajectory_widget.py
tests/: example_data.py  test_add_peak_bin_score.py  test_coarse_grain.py  test_compute_peak_distance_cmd.py  test_diffusion_map.py  test_extract_peak_trajectory.py  test_get_graph_distance.py  test_input_validation.py  test_peak_distance_shared.py  test_run_dm.py
