# pyproject.toml for peak-trajectory

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "peak-trajectory"
version = "0.1.0" # Or your current version
description = "Compute peak trajectories from single-cell ATAC-Seq data (adapted from GeneTrajectory)"
license = {file = "LICENSE"} # Make sure you have a LICENSE file
readme = "README.md"
authors = [
    {name = "Francesco Strino", email = "francesco.strino@pcmgf.com"},
    {name = "Rihao Qu", email = "rihao.qu@yale.edu"},
    # Add your name if desired
]
maintainers = [
     {name = "Francesco Strino", email = "francesco.strino@pcmgf.com"},
     {name = "Rihao Qu", email = "rihao.qu@yale.edu"},
     # Add your name if desired
]
keywords = ["Peak trajectory", "scATAC-seq", "Optimal Transport", "Chromatin Accessibility", "Trajectory Inference", "Single Cell"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License", # Assuming BSD, update if different
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "igraph>=0.10",
    "matplotlib>=3.6",
    "numpy>=1.25",
    "pandas>=1.5",
    "pot>=0.8.2", # Python Optimal Transport
    "scanpy>=1.9.3",
    "anndata>=0.8.0", # Explicitly add anndata
    "mudata>=0.2.0", # Add mudata if used within the package itself
    "scikit-misc>=0.1.3",
    "scikit-learn>=1.0", # Bumped slightly from original example
    "scipy>=1.8",
    "seaborn>=0.13",
    "tqdm>=4.64.1",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "twine", "build", "flit"]
widgets = ["ipywidgets>8", "jupyterlab>=4"]

[project.urls]
# Update URLs if repo name/location changes
Homepage = "https://github.com/Klugerlab/PeakTrajectory-python" # Example URL
Repository = "https://github.com/Klugerlab/PeakTrajectory-python" # Example URL
"Bug Tracker" = "https://github.com/Klugerlab/PeakTrajectory-python/issues" # Example URL
"Original GeneTrajectory" = "https://github.com/KlugerLab/GeneTrajectory"

# --- Tool configuration for Flit ---
[tool.flit.module]
name = "peak_trajectory" # The name of the package directory